[package]
name = "blink_dbus_server"
version = "0.1.0"
authors = ["Simon Brummer <simon.brummer@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "1.9.1"
rust_raspi_led_strip = { git = "https://github.com/ziemann-sebastian/rust-raspi-led-strip.git", branch = "main" }
